apps/media/media-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-worker
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
      role: worker
  template:
    metadata:
      labels:
        app: media
        role: worker
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: media-api
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: media-db-credentials
      containers:
        - name: media-worker
          image: acrdevmedia.azurecr.io/media-api:1.1.2
          command: ["python", "worker.py"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets
              readOnly: true
